--- a/roles/v2v.ci/tasks/main.yml
+++ b/roles/v2v.ci/tasks/main.yml
@@ -61,7 +61,7 @@
 
 - include_tasks: miq_conversion_hosts_enable.yml
   with_items:
-     -  "{{ groups['ovirt_conversion_host_vms'] }}"
+     -  "{{ groups['ovirt_conversion_hosts'] }}"
   tags:
     - miq_conversion_hosts_enable
 
