--- a/roles/v2v.ci/tasks/miq_conversion_hosts_enable.yml
+++ b/roles/v2v.ci/tasks/miq_conversion_hosts_enable.yml
@@ -1,28 +1,27 @@
 ---
 - block:
-
-    - name: Find Conversion VM JSON
+    - name: Find host JSON
       uri:
-        url: "https://{{ inventory_hostname }}/api/vms?expand=resources&attributes=name&filter[]=name={{ hostvars[item].rhv_vm_name }}&filter[]=vendor=redhat&filter[]=ems_id!=null"
+        url: "https://{{ inventory_hostname }}/api/hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources&attributes=authentications"
         user: "{{ miq_app_username }}"
         password: "{{ miq_app_password }}"
         method: GET
         validate_certs: no
-      register: conversion_vm_details
-      until: conversion_vm_details.json.subcount == 1
+      register: host_json
+      until: host_json.json.subcount == 1
       retries: 30
       delay: 60
 
     - set_fact:
-        query: "resources[?name=='{{ hostvars[item].rhv_vm_name }}'].id"
+        query: "resources[?name=='{{ hostvars[item].rhv_host_name }}'].id"
 
-    - name: Extracting Conversion VM ID from JSON
+    - name: Extracting host id from JSON
       set_fact:
-        conv_vm_id: "{{ conversion_vm_details.json | json_query(query) | first }}"
+        host_id: "{{ host_json.json | json_query(query) | first }}"
 
-    - name: Look for conversion host VM {{ hostvars[item].rhv_vm_name }}
+    - name: Look for conversion host {{ hostvars[item].rhv_host_name }}
       uri:
-        url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_vm_name }}&expand=resources"
+        url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources"
         user: "{{ miq_app_username }}"
         password: "{{ miq_app_password }}"
         method: GET
@@ -31,13 +30,13 @@
 
     - block:
         - set_fact:
-            query: "resources[?name=='{{ hostvars[item].rhv_vm_name }}'].id"
+            query: "resources[?name=='{{ hostvars[item].rhv_host_name }}'].id"
 
         - name: Extract conversion host ID from JSON
           set_fact:
              conversion_host_id: "{{ conversion_host_json.json | json_query(query) | first }}"
 
-        - name: Remove conversion host VM {{ hostvars[item].rhv_vm_name }}
+        - name: Remove conversion host {{ hostvars[item].rhv_host_name }}
           uri:
             url: "https://{{ inventory_hostname }}/api/conversion_hosts/{{conversion_host_id}}"
             user: "{{ miq_app_username }}"
@@ -46,9 +45,9 @@
             status_code: 204
             validate_certs: no
 
-        - name: Wait until conversion host VM {{ hostvars[item].rhv_vm_name }} is removed
+        - name: Wait until conversion host {{ hostvars[item].rhv_host_name }} is removed
           uri:
-            url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_vm_name }}&expand=resources"
+            url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources"
             user: "{{ miq_app_username }}"
             password: "{{ miq_app_password }}"
             method: GET
@@ -67,19 +66,14 @@
         ansible_ssh_pass: "{{ v2v_ci_rhv_root_password }}"
         ansible_pipelining: true
 
-    # Note: Temporarily, these keys are taken from RHV Engine
-    #       Once we will automate the UCI VMs creation - they will be taken from localhost
-    - name: Read RHV Engine SSH RSA Private key file /root/.ssh/id_rsa
+    - name: Read RHV Engine SSH Private key
       delegate_to: "{{ v2v_ci_rhv_hostname }}"
-      shell: tail -n +4 /root/.ssh/id_rsa
+      shell: tail -n +4 /etc/pki/ovirt-engine/keys/engine_id_rsa
       register: ssh_key
 
-    - name: Read RHV Engine CA certificates bundle file /etc/pki/ovirt-engine/apache-ca.pem
-      delegate_to: "{{ v2v_ci_rhv_hostname }}"
-      shell: tail -n +4 /etc/pki/ovirt-engine/apache-ca.pem
-      register: ca_certs_file
+#    - debug: msg="{{ssh_key.stdout}}"
 
-    - name: Enable conversion host {{ hostvars[item].rhv_vm_name }}
+    - name: Enable conversion host {{ hostvars[item].rhv_host_name }}
       uri:
         url: "https://{{ inventory_hostname }}/api/conversion_hosts"
         user: "{{ miq_app_username }}"
@@ -90,16 +84,14 @@
         body:
           action: create
           resources:
-            - name: "{{ hostvars[item].rhv_vm_name }}"
-              resource_type: "ManageIQ::Providers::Redhat::InfraManager::Vm"
-              resource_id: "{{ conv_vm_id }}"
+            - name: "{{ hostvars[item].rhv_host_name }}"
+              resource_type: "ManageIQ::Providers::Redhat::InfraManager::Host"
+              resource_id: "{{ host_id }}"
               max_concurrent_tasks: "{{ v2v_max_concurrent_conversions }}"
-              auth_user: "cloud-user"
+              auth_user: "root"
               vmware_vddk_package_url: "{{ vmware_vddk_package_url }}"
               conversion_host_ssh_private_key: "{{ ssh_key.stdout }}"
               vmware_ssh_private_key: "{{ vmware_ssh_private_key }}"
-              tls_ca_certs: "{{ ca_certs_file.stdout }}"
-              address: "{{ hostvars[item].ip_address }}"
       register: enable_conversion_host_json
 
     - name: Check enable conversion host task url is valid
