--- a/roles/v2v.ci/tasks/rhv_storage_discovery.yml
+++ b/roles/v2v.ci/tasks/rhv_storage_discovery.yml
@@ -3,18 +3,18 @@
 # iscsi target logout & login to renew the luns discovery
 - block:
 
-  - name: Target logout after LUN creation
-    delegate_to: "{{ groups['ovirt_conversion_hosts'][0] }}"
+  - name: iSCSI target logout after LUN creation
+    delegate_to: "{{ groups['ovirt_conversion_hosts'] | first }}"
     shell: iscsiadm -m session -u
 
-  - name: Target login
-    delegate_to: "{{ groups['ovirt_conversion_hosts'][0] }}"
+  - name: iSCSI target login
+    delegate_to: "{{ groups['ovirt_conversion_hosts'] | first }}"
     shell: iscsiadm -m discovery -p {{ iscsi_target_ip }} -t st -l
 
   when: rhv_storage == 'iscsi'
 
 # Run /usr/libexec/vdsm/fc-scan
 - name: Run fc-scan script
-  delegate_to: "{{ groups['ovirt_conversion_hosts'][0] }}"
+  delegate_to: "{{ groups['ovirt_conversion_hosts'] | first }}"
   shell: /usr/libexec/vdsm/fc-scan
   when: rhv_storage == 'fcp'
