Picking the last instance of target datastores that are called the same

--- a/roles/v2v.ci/tasks/miq_config_infra_mappings.yml
+++ b/roles/v2v.ci/tasks/miq_config_infra_mappings.yml
@@ -72,7 +72,7 @@
 
     - name: Extracting target datastore id from JSON
       set_fact:
-        target_datastore_id: "{{ target_datastore_json.json | json_query(query) | first }}"
+        target_datastore_id: "{{ target_datastore_json.json | json_query(query) | last }}"
 
     - name: Collect source lan ids
       uri:
